# gtm-bindings

./: CMakeLists.txt  README.md
CMake/: FindGTM.cmake  FindNodeJS.cmake  FindV8.cmake  Version.cmake
Source/: CMakeLists.txt  GTM.cpp  GTM.h  NodeAddon.cpp  NodeGTM.cpp  NodeGTM.h  README  mjsConfigure.h.in  setupEnvironment.sh.in
Testing/: CMakeLists.txt  README  gtm001.R  gtm001.cpp  gtm001.js  gtm001.py  gtm001.rb  gtm002.cpp  gtm002.js  gtm002.py  gtm002.rb  gtm003.cpp  gtm003.js  gtm003.py  gtm003.rb  gtm004.cpp  gtm004.js  gtm004.py  gtm004.rb  gtm005.cpp  gtm005.js  gtm005.py  gtm005.rb  gtm006.cpp  gtm006.js  gtm006.py  gtm006.rb  gtm007.cpp  gtm007.js  gtm007.py  gtm007.rb  gtm008.cpp  gtm008.js  gtm008.py  gtm008.rb  gtm009.cpp  gtm009.js  gtm009.py  gtm009.rb  gtm010.cpp  (+25 more)
Wrapping/: CMakeLists.txt  GTM.i  GTMPython.cpp  Python.i  R.i  Ruby.i  gtm.i  runPythonTest.sh.in  setupPythonEnvironment.sh.in  setupREnvironment.sh.in
Wrapping/Distribution/: CMakeLists.txt
Wrapping/NodePackage/: README  index.js.in  package.json  package.json.in
Wrapping/PythonPackage/: README  distribute_setup.py  setup.py.in
Wrapping/RubyGemPackage/: gtm.gemspec
